--- a/Distributable/localizations/Localization.json
+++ b/Distributable/localizations/Localization.json
@@ -37,7 +37,7 @@
 	},
     "GAMEPLAY_ccSmokingCardDescription":{
         "English":"A warning card originating from a cigarette pack.",
-        "Simplified Chinese":"KP31神秘科技卡牌系列 之 死神卡牌，尚不清楚有什么作用"
+        "Simplified Chinese":"KP31神秘科技卡牌系列 之 死神卡牌，似乎与加工内脏有些联系。使用后获得12个加工内脏"
 	},	
     "GAMEPLAY_ccTLDevCard":{
         "English":"TLDev Card",
@@ -45,7 +45,7 @@
 	},
     "GAMEPLAY_ccTLDevCardDescription":{
         "English":"A unique and autographed team card.",
-        "Simplified Chinese":"KP31神秘科技卡牌系列 之 工具卡牌，似乎与废金属有些联系。使用后获得12个废旧金属"
+        "Simplified Chinese":"KP31神秘科技卡牌系列 之 工具卡牌，似乎与废旧金属有些联系。使用后获得12个废旧金属"
 	},
     "GAMEPLAY_ccRifleCard":{
         "English":"Rifle Trading Card",
