添加南瓜卡牌和石头的转换蓝图，1南瓜卡牌=24石头

--- a/Distributable/localizations/Localization.json
+++ b/Distributable/localizations/Localization.json
@@ -93,6 +93,6 @@
 	},
     "GAMEPLAY_ccPumpkinSoupCardDescription":{
         "English":"A souvenir card originating from a special 'Pumpkin Soup' can. Only available for a limited time.",
-        "Simplified Chinese":"KP31神秘科技卡牌系列 之 万圣南瓜卡牌，尚不清楚有什么作用"
+        "Simplified Chinese":"KP31神秘科技卡牌系列 之 万圣南瓜卡牌，似乎与石块有些联系。使用后获得24个石块"
 	},	
 }
